# terminus-server

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  client.py  docker-compose.yml  requirements.txt
scripts/: build.sh
src/c_core/: crypto.c  server.c
src/python_wrapper/: config.py  main_server.py  test_crypto.py
test/: api_test.py  test_crypto.py  test_stress.py  test_stress.sh
